@@ -1,4 +1,5 @@
-    Febrary 15, 2018
+    Febrary 16, 2018
+    + Bug: Enable save menu when image is modified
     + Bug: resize and crop
     
     Febrary 15, 2018
